@@ -57,7 +57,9 @@
 
         <module>package</module>
     </modules>
-
+    <prerequisites>
+        <maven>3.0</maven>
+    </prerequisites>
     <properties>
         <project.version>0.8.0-SNAPSHOT</project.version>
         <pkg.version>0.8.${env.BUILD_NUMBER}</pkg.version>
@@ -113,6 +115,11 @@
         <dep.akka.version>2.3.2</dep.akka.version>
         <dep.spray-json_2.10 groupId="io.spray">1.2.5</dep.spray-json_2.10>
         <dep.slick_2.10 groupId="com.typesafe.slick">2.0.1</dep.slick_2.10>
+
+        <scoverage-plugin.version>0.98.2</scoverage-plugin.version>
+        <scoverage.version>0.98.2</scoverage.version>
+        <maven.plugin.scoverage.version>0.98.2</maven.plugin.scoverage.version>
+        <scala.short>2.10</scala.short>
     </properties>
     <profiles>
         <profile>
@@ -133,11 +140,56 @@
                     <version>3.1.6</version>
                     <executions>
                         <execution>
+                            <id>compile</id>
                             <goals>
+                                <goal>add-source</goal>
                                 <goal>compile</goal>
+                            </goals>
+                            <configuration>
+                                <jvmArgs>
+                                    <jvmArg>-Xms64m</jvmArg>
+                                    <jvmArg>-Xmx1024m</jvmArg>
+                                </jvmArgs>
+                                <compilerPlugins>
+                                    <!--<compilerPlugin>
+                                        <groupId>org.scoverage</groupId>
+                                        <artifactId>scalac-scoverage-plugin_${scala.short}</artifactId>
+                                        <version>${scoverage-plugin.version}</version>
+                                    </compilerPlugin>-->
+                                    <!--<compilerPlugin>
+                                            <groupId>com.mmakowski</groupId>
+                                            <artifactId>maven-specs2-plugin</artifactId>
+                                            <version>0.4.2</version>
+                                    </compilerPlugin>-->
+                                </compilerPlugins>
+                                <!--<args>
+                                    <arg>-g:vars</arg>
+                                    <arg>-Yrangepos</arg>
+                                    <arg>-P:scoverage:dataDir:${project.build.outputDirectory}</arg>
+                                </args>-->
+                            </configuration>
+                        </execution>
+                        <!--<execution>
+                            <id>test</id>
+                            <goals>
+                                <goal>add-source</goal>
                                 <goal>testCompile</goal>
                             </goals>
-                        </execution>
+                            <configuration>
+                                <compilerPlugins>
+                                    <compilerPlugin>
+                                        <groupId>org.scoverage</groupId>
+                                        <artifactId>scalac-scoverage-plugin_${scala.short}</artifactId>
+                                        <version>${scoverage-plugin.version}</version>
+                                    </compilerPlugin>
+                                    <compilerPlugin>
+                                        <groupId>com.mmakowski</groupId>
+                                        <artifactId>maven-specs2-plugin</artifactId>
+                                        <version>0.4.2</version>
+                                    </compilerPlugin>
+                                </compilerPlugins>
+                            </configuration>
+                        </execution>-->
                     </executions>
                     <configuration>
                         <scalaVersion>${dep.scala.version}</scalaVersion>
@@ -145,7 +197,39 @@
                     </configuration>
                 </plugin>
                 <plugin>
-                    <!--run specs test from maven-->
+                    <groupId>org.scoverage</groupId>
+                    <artifactId>maven-scoverage-plugin</artifactId>
+                    <version>${scoverage.version}</version>
+                    <executions>
+                        <execution>
+                            <id>scales-report</id>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <!--<plugin>
+                    <groupId>org.scalatest</groupId>
+                    <artifactId>scalatest-maven-plugin</artifactId>
+                    <version>1.0-RC2</version>
+                    <executions>
+                        <execution>
+                            <id>test</id>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>test</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <argLine>-XX:MaxPermSize=512m -Xmx1024m</argLine>
+                    </configuration>
+                </plugin>-->
+                <!--<plugin>
+                    &lt;!&ndash;run specs test from maven&ndash;&gt;
                     <groupId>com.mmakowski</groupId>
                     <artifactId>maven-specs2-plugin</artifactId>
                     <version>0.4.2</version>
@@ -160,7 +244,7 @@
                         </execution>
 
                     </executions>
-                </plugin>
+                </plugin>-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -170,7 +254,7 @@
                         <target>1.7</target>
                     </configuration>
                 </plugin>
-                <plugin>
+                <!--<plugin>
                     <groupId>org.apache.rat</groupId>
                     <artifactId>apache-rat-plugin</artifactId>
                     <version>0.8</version>
@@ -187,11 +271,11 @@
                         <numUnapprovedLicenses>0</numUnapprovedLicenses>
                         <excludes>
                             <exclude>CODE_CONVENTIONS</exclude>
-                            <!-- generated content-->
+                            &lt;!&ndash; generated content&ndash;&gt;
                             <exclude>**/target/**</exclude>
                             <exclude>/_bsp/**</exclude>
                             <exclude>.checkstyle</exclude>
-                            <!--source control and IDEs &ndash;&gt;-->
+                            &lt;!&ndash;source control and IDEs &ndash;&gt;&ndash;&gt;
                             <exclude>.reviewboardrc</exclude>
                             <exclude>.git/**</exclude>
                             <exclude>.gitignore</exclude>
@@ -199,11 +283,11 @@
                             <exclude>.idea/**</exclude>
                             <exclude>**/*.iml</exclude>
                             <exclude>**/*.ipr</exclude>
-                            <!-- test resources (for Giraph on YARN profile)-->
+                            &lt;!&ndash; test resources (for Giraph on YARN profile)&ndash;&gt;
                             <exclude>**/test/resources/**</exclude>
                         </excludes>
                     </configuration>
-                </plugin>
+                </plugin>-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
@@ -225,7 +309,7 @@
                         </execution>
                     </executions>
                 </plugin>
-                <plugin>
+                <!--<plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
                     <version>1.3</version>
@@ -244,7 +328,7 @@
                             </configuration>
                         </execution>
                     </executions>
-                </plugin>
+                </plugin>-->
                 <plugin>
                     <groupId>com.github.koraktor</groupId>
                     <artifactId>mavanagaiata</artifactId>
@@ -405,7 +489,7 @@
                     </configuration>
                 </plugin>-->
 
-                <plugin>
+                <!--<plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>findbugs-maven-plugin</artifactId>
                     <version>2.5.2</version>
@@ -422,8 +506,8 @@
                             </goals>
                         </execution>
                     </executions>
-                </plugin>
-                <plugin>
+                </plugin>-->
+                <!--<plugin>
                     <groupId>org.sonatype.plugins</groupId>
                     <artifactId>munge-maven-plugin</artifactId>
                     <version>1.0</version>
@@ -439,27 +523,38 @@
                             </configuration>
                         </execution>
                     </executions>
-                </plugin>
+                </plugin>-->
             </plugins>
         </pluginManagement>
         <plugins>
+
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
             </plugin>
+            <!--<plugin>
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest-maven-plugin</artifactId>
+                <version>1.0-RC2</version>
+            </plugin>-->
+            <!--<plugin>
+                <groupId>org.scoverage</groupId>
+                <artifactId>maven-scoverage-plugin</artifactId>
+                <version>${scoverage.version}</version>
+            </plugin>-->
 
-            <plugin>
+           <!-- <plugin>
                 <groupId>org.apache.rat</groupId>
                 <artifactId>apache-rat-plugin</artifactId>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -472,7 +567,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>-->
-            <plugin>
+<!--            <plugin>
                 <artifactId>exec-maven-plugin</artifactId>
                 <groupId>org.codehaus.mojo</groupId>
                 <version>1.2.1</version>
@@ -546,18 +641,13 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.scalatest</groupId>
-                <artifactId>scalatest_2.11</artifactId>
-                <version>2.1.6</version>
-                <scope>test</scope>
-            </dependency>
+
 
             <!--<dependency>
                 <groupId>org.scala-lang</groupId>
